# ominiforge

./: .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  flake.nix  justfile  report.md  rust-toolchain.toml
.github/workflows/: ci.yml
.zed/: rust-analyzer.sh  settings.json
doc/: agents-md.md  architecture.md  context-management.md  event-schema.md  feature-requests.md  frontend.md  gateway.md  hook-protocol.md  monitor.md  phase2-plan.md  phase6-plan.md  plan.md  plugin-protocol.md  profile.md  sandbox.md  session-storage.md  skill.md  todo.md  tool-protocol.md  workspace-plan.md
doc/archive/: phase2-log.md
frontend/: .gitignore  .prettierignore  DESIGN.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/scripts/: shot.mjs
frontend/src/lib/: client.ts  conversation.test.ts  conversation.ts  draft-config.ts  stats.ts
frontend/src/lib/client-core/: endpoints.ts  gateway-transport.ts  index.ts  types.ts
frontend/src/lib/components/: Button.svelte
frontend/src/lib/stores/: currentSession.ts
frontend/src/lib/styles/: global.css  tokens.css
frontend/src/lib/types/: ArtifactEvent.ts  ArtifactId.ts  BlockContent.ts  Content.ts  ContentBlockType.ts  CoreEvent.ts  Delta.ts  ErrorDetail.ts  ErrorEvent.ts  ErrorSeverity.ts  EventId.ts  EventPayload.ts  EventSource.ts  GatewayEvent.ts  HookEvent.ts  HookOutcome.ts  InjectionEvent.ts  InjectionSource.ts  ModelEvent.ts  ModelSummary.ts  Origin.ts  OriginKind.ts  ProfileSummary.ts  RuntimeInfo.ts  SessionEndReason.ts  SessionEvent.ts  SessionId.ts  SessionMeta.ts  SessionSummary.ts  SourceKind.ts  StopReason.ts  ToolEvent.ts  ToolOutput.ts  ToolSource.ts  TurnEvent.ts  TurnFailureReason.ts  TurnId.ts  Usage.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/evolution/: +page.svelte
frontend/src/routes/monitor/: +page.svelte
frontend/src/routes/sessions/: +page.svelte
frontend/src/routes/sessions/[id]/: +page.svelte  +page.ts
src/: agent.rs  agents_md.rs  app.rs  cli.rs  context.rs  evolution.rs  gateway.rs  hook.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory.rs  monitor.rs  process_env.rs  provider.rs  session.rs  skill.rs  tool.rs  tui.rs
src/agent/: collector.rs  error.rs  mod.rs  plan.rs  resume.rs  sink.rs
src/config/: error.rs  mod.rs  profile.rs  providers.rs
src/core/: envelope.rs  ids.rs  mod.rs  payload.rs
src/gateway/: actor.rs  config.rs  mod.rs  registry.rs  server.rs
src/llm/: message.rs  mod.rs
src/mcp/: client.rs  config.rs  mod.rs  protocol.rs
src/provider/: mod.rs
src/provider/openai/: mod.rs  wire.rs
src/session/: bus.rs  error.rs  event_log.rs  id.rs  meta.rs  mod.rs
src/tool/: edit.rs  error.rs  mod.rs  read.rs  shell.rs  snapshot.rs  write.rs
src/tui/: conversation.rs  input.rs  mod.rs  statusbar.rs  statusline.rs  theme.rs
