[package]
name = "ominiforge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "a multi agent app"
repository = "https://github.com/replace-me/ominiforge"
readme = "README.md"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "clock",
] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
  "http2",
  "charset",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
ulid = "1"


[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
