[package]
name = "ominiforge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "a multi agent app"
repository = "https://github.com/replace-me/ominiforge"
readme = "README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "clock",
] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
  "http2",
  "charset",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "time",
  "fs",
  "io-util",
  "sync",
] }
toml = "1.1"
ulid = "1"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
unicode-width = "=0.2.0"
catppuccin = "2.8.0"
git2 = "0.21.0"

# Gateway (feature `gateway`): HTTP/SSE/WS server for Web/desktop/mobile.
# Optional so a `--no-default-features` build (e.g. an embedded CLI-only target)
# drops the axum stack entirely. See doc/architecture.md §5.1, §18.
axum = { version = "0.8", optional = true, features = ["ws"] }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }

# ts-rs (feature `ts-export`): generate the TS type bindings the frontend
# consumes from the Rust wire types (events, gateway frames, session meta). Dev
# tooling only — not compiled into any shipping binary. Generation runs through
# `#[cfg(test)]` export tests; see doc/frontend.md §4.
ts-rs = { version = "12", optional = true, features = [
  "chrono-impl",
  "serde-json-impl",
  "no-serde-warnings",
] }

[features]
# Gateway on by default (doc/architecture.md §5.1); build without it via
# `--no-default-features`.
default = ["gateway"]
gateway = ["dep:axum", "dep:tokio-stream"]
# Enables ts-rs derives on the wire types so `cargo test --features ts-export`
# regenerates frontend/src/lib/types/*.ts. Off by default; CI runs it to gate
# type drift (doc/frontend.md §6).
ts-export = ["dep:ts-rs"]

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
